example/secondfile/objects/Telco_ASR_Status__c.object
<CustomObject>
    <fields>
        <fullName>Data_Type__c</fullName>
        <label>Data Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EVC_VLAN_PON__c</fullName>
        <label>EVC/VLAN PON</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_VLAN_ASR_PON_Status_update__c</fullName>
        <label>Last VLAN ASR/ PON Status update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Port_ID__c</fullName>
        <label>Port ID</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RDS_Premise_Details__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RDS-Premise Details</label>
        <referenceTo>RDS_Premise_Details__c</referenceTo>
        <relationshipLabel>Telco ASR Status</relationshipLabel>
        <relationshipName>Telco_ASR_Status</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UNI_PON_ASR_Status_Response__c</fullName>
        <label>UNI PON/ ASR Status Response</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>UNI_PON_ASR_Status_update__c</fullName>
        <label>UNI PON/ ASR Status update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>UNI_PON__c</fullName>
        <label>UNI PON</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USO_Number__c</fullName>
        <label>USO Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VLAN_ASR_PON_Status_Response__c</fullName>
        <label>VLAN ASR/ PON Status Response</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VLAN_ID__c</fullName>
        <label>VLAN ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Telco ASR Status</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ASR-{0000}</displayFormat>
        <label>Telco ASR Status Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Telco ASR Status</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>